--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "author": "Hiep Nguyen <hiepnh610@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsdom": "^15.1.1",
     "lodash": "^4.17.15",
+    "multer": "^1.4.2",
+    "pug": "^2.0.4",
     "xlsx": "^0.15.1"
   }
 }
